fix: improve JDK 25 learning examples